--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -1,39 +1,68 @@
 .about-container {
+  @media only screen and (max-width: 600px) {
+    height: 100%;
+    padding:0 0 5rem 0;
+
+  }
 }
 .about {
   display: grid;
-  grid-template-columns: 1.5fr 1fr;
+  grid-template-columns: 1.5fr auto;
   grid-template-rows: auto;
   justify-items: flex-start;
   align-items: flex-start;
   align-content: center;
-  column-gap: 1rem;
-  grid-row-gap: 2rem;
+  grid-row-gap: 1rem;
+  grid-column-gap: 6rem;
+  @media only screen and (max-width: 1100px) {
+    grid-template-columns: 1fr;
+  }
 }
 .about-title {
   grid-column: span 2;
   position: relative;
   width: 100%;
+  width: 85%;
+  @media only screen and (max-width: 1100px) {
+    grid-column: span 1;
+    width: 100%;
+    justify-content: flex-start;
+  }
   .about-line {
-    // position: absolute;
-    // height: 2px;
-    // width: 100%;
-    // background-color: black;
-    // top: 55%;
-    // left: 0;
-    // right: 0;
-    // transform: translateY(-50%);
   }
 }
 .about-content {
-  // border:solid 1px black;
+  row-gap: 1.5rem;
   height: 100%;
   margin: auto 0;
+  color: rgba(0, 0, 0, 0.6);
+  @media only screen and (max-width: 1100px) {
+    align-items: center;
+  }
   P {
     text-align: left;
     font-size: 1.3rem;
     font-weight: 400;
     line-height: 30px;
+    @media only screen and (max-width: 1300px) {
+      font-size: 1.15rem;
+    }
+    @media only screen and (max-width: 1100px) {
+      text-align: left;
+      font-size: 1.5rem;
+      line-height: 37px;
+    }
+    @media only screen and (max-width: 900px) {
+      font-size: 1.2rem;
+    }
+    @media only screen and (max-width: 600px) {
+      line-height: 27px;
+    }
+  }
+  .about-technologies {
+    font-weight: 500;
+    color: black;
+    text-align: center;
   }
   ul {
     display: grid;
@@ -41,25 +70,51 @@
     justify-content: flex-start;
     justify-items: flex-start;
     padding-left: 1rem;
-    margin-top: 1rem;
+    margin: 1rem 0;
     grid-row-gap: 0.7rem;
+    grid-column-gap: 7rem;
+    @media only screen and (max-width: 1100px) {
+      grid-template-columns: repeat(6, auto);
+      grid-column-gap: 3rem;
+      list-style-type: none;
+      margin-top: 0;
+      padding: 0;
+      justify-items: center;
+    }
+    @media only screen and (max-width: 900px) {
+      grid-column-gap: 1.3rem;
+    }
+    @media only screen and (max-width: 600px) {
+      grid-template-columns: repeat(2, auto);
+    }
     li {
       font-size: 1.1rem;
       letter-spacing: 3px;
       color: #059f76;
+      @media only screen and (max-width: 1100px) {
+        text-decoration: none;
+      }
     }
-    li::before{
-      color:black;
+    li::before {
+      color: black;
     }
   }
 }
+
 .about-image {
-  justify-self: center;
+  justify-self: flex-end;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
   border-radius: 0.5rem;
+  @media only screen and (max-width: 1100px) {
+    justify-self: center;
+  }
   img {
     object-fit: cover;
     object-position: bottom;
     border-radius: 0.5rem;
+    @media only screen and (max-width: 1300px) {
+      width: 280px;
+      height: 280px;
+    }
   }
 }
