--- a/src/styles/projects.scss
+++ b/src/styles/projects.scss
@@ -1,4 +1,6 @@
 .projects-container {
+  position: relative;
+  top: 6rem;
 }
 .projects {
 }
@@ -7,19 +9,21 @@
 
 .project-container {
   position: relative;
-  top: 5rem;
+  margin-top: 6rem;
   margin-bottom: 15rem;
-  // display: grid;
-  // grid-template-columns: 1fr 2fr;
-  // justify-items: flex-start;
-  // align-content: center;
+  width: 100%;
+  @media only screen and (max-width: 600px) {
+    flex-direction: column;
+    justify-content: flex-start;
+    margin-bottom: 0rem;
+  }
 }
 .project-tag {
-  box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
+  position: absolute;
+  left: 0;
   padding: 1rem;
   align-self: flex-start;
   text-align: left;
-  position: relative;
   /* From https://css.glass */
   background: rgba(255, 255, 255, 0.53);
   border-radius: 16px;
@@ -30,35 +34,102 @@
   z-index: 1;
   width: 600px;
   row-gap: 1rem;
+  justify-content: space-between;
+  box-sizing: border-box;
+  @media only screen and (max-width: 1300px) {
+    width: 550px;
+    row-gap: 0.5rem;
+  }
+  @media only screen and (max-width: 900px) {
+    width: 620px;
+  }
+  @media only screen and (max-width: 600px) {
+    backdrop-filter: blur(2px) saturate(200%);
+    -webkit-backdrop-filter: blur(2px) saturate(200%);
+    background-color: rgba(255, 255, 255, 0.45);
+    border-radius: 12px;
+    border: 1px solid rgba(255, 255, 255, 0.125);
+    position: relative;
+    width: 90vw;
+  }
   h2 {
     font-size: 2rem;
   }
   p {
     font-size: 1.2rem;
     line-height: 30px;
+    color: rgba(0, 0, 0, 0.6);
+    @media only screen and (max-width: 1300px) {
+      font-size: 1.1rem;
+    }
+    @media only screen and (max-width: 1100px) {
+    }
   }
 }
 .project-tag-mirrored {
   @extend.project-tag;
-  order: 2;
-  position: relative;
-  right: 20rem;
+  right: 0rem;
+  left: auto;
   align-items: flex-end;
   text-align: right;
+  @media only screen and (max-width: 600px) {
+    text-align: left;
+    align-items: flex-start;
+  }
 }
 .project-image {
+  --imageHeight: 7rem;
+  top: var(--imageHeight);
   position: relative;
-  right: 20rem;
-  top: 6.5rem;
+  // left: 20rem;
+  @media only screen and (max-width: 1300px) {
+    top: 8.5rem;
+  }
+  @media only screen and (max-width: 600px) {
+    top: -3rem;
+  }
   img {
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
     border-radius: 0.3rem;
+    width: 900px;
+
+    @media only screen and (max-width: 1300px) {
+      width: 750px;
+    }
+    @media only screen and (max-width: 900px) {
+      width: 600px;
+    }
+    @media only screen and (max-width: 600px) {
+      width: 90vw;
+    }
   }
 }
 .project-image-mirrored {
+  @extend .project-image;
+  justify-self: flex-start;
   position: relative;
-  top: 6.5rem;
+  top: var(--imageHeight);
+  @media only screen and (max-width: 1300px) {
+    top: 8.5rem;
+  }
+  @media only screen and (max-width: 600px) {
+    top: -3rem;
+  }
 }
 .project-links {
+  position: relative;
+  top: 1rem;
   font-size: 2rem;
   cursor: pointer;
+  width:100%;
+  padding-bottom: .5rem;
+  @media only screen and (max-width: 1300px) {
+    font-size: 1.7rem;
+
+  }
+  a{
+    @media only screen and (max-width: 600px) {
+      justify-content: flex-end;
+    }
+  }
 }
