--- a/src/styles/work.scss
+++ b/src/styles/work.scss
@@ -1,9 +1,15 @@
 .work-container {
+  // border: solid 1px black;
+  @media only screen and (max-width: 1100px) {
+    height: 100%;
+    padding: 5rem 0;
+  }
 }
 .work {
-  row-gap: 3rem;
+  row-gap: 2rem;
 }
 .work-title {
+  text-align: left;
 }
 .work-content {
   row-gap: 1.8rem;
@@ -15,6 +21,10 @@
   overflow-y: hidden;
   scrollbar-width: none;
   column-gap: 3rem;
+  @media only screen and (max-width: 600px) {
+    width: 90vw;
+    overflow-x: scroll;
+  }
   button {
     cursor: pointer;
     font-size: 1rem;
@@ -24,22 +34,42 @@
     // border-bottom: solid 2px #059f76;
     letter-spacing: 4px;
     font-weight: 600;
+    @media only screen and (max-width: 1100px) {
+      font-size: 1.2rem;
+    }
+    @media only screen and (max-width: 600px) {
+      width: auto;
+      text-align: center;
+      padding: 0 1rem;
+    }
   }
 }
 .work-details {
   row-gap: 1rem;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
-  border-radius: .5rem;
+  border-radius: 0.5rem;
   padding: 1rem;
   width: 100%;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
   .work-company {
     color: #059f76;
   }
   .work-technologies {
     column-gap: 1.5rem;
+    @media only screen and (max-width: 600px) {
+      flex-wrap: wrap;
+      width: 95%;
+      justify-content: flex-start;
+      row-gap: .3rem;
+    }
     p {
-    //   color: rgba(5, 159, 118, 0.8);
+      //   color: rgba(5, 159, 118, 0.8);
       font-weight: 700;
+      @media only screen and (max-width: 1100px) {
+        font-size: 1.3rem;
+      }
     }
   }
   .work-time-line {
@@ -47,20 +77,31 @@
     letter-spacing: 3px;
   }
   h2 {
+    text-align: left;
     font-size: 2rem;
+    @media only screen and (max-width: 1300px) {
+      font-size: 1.8rem;
+    }
   }
   h4 {
     font-size: 1.1rem;
     text-align: left;
     color: rgba(0, 0, 0, 0.8);
+    @media only screen and (max-width: 1100px) {
+      font-size: 1.2rem;
+    }
   }
   ul {
     row-gap: 1.2rem;
     padding-left: 2rem;
     li {
       text-align: left;
-      font-size: 1.1rem;
-      color: rgba(0, 0, 0, 0.7);
+      font-size: 1.3rem;
+      color: rgba(0, 0, 0, 0.6);
+      font-weight: 400;
+      @media only screen and (max-width: 1100px) {
+        font-size: 1.2rem;
+      }
     }
   }
 }
