--- a/src/styles/contact.scss
+++ b/src/styles/contact.scss
@@ -23,7 +23,7 @@
   h1 {
     @media only screen and (max-width: 600px) {
       width:100%;
-      text-align: left !important;
+      text-align: center;
     }
   }
 }
