--- a/src/styles/landingPage.scss
+++ b/src/styles/landingPage.scss
@@ -24,19 +24,18 @@
       font-size: 1rem;
     }
   }
-  a {
+  button {
     padding: 1rem 3rem;
-    border:solid 2px rgba(0, 0, 0, 0.6);
-    color:rgba(0, 0, 0, 0.6);
+    border: solid 2px rgba(0, 0, 0, 0.6);
+    color: rgba(0, 0, 0, 0.6);
     border-radius: 0.5rem;
     font-weight: 500;
     font-size: 1.3rem;
     margin-top: 4rem;
+    cursor: pointer;
     @media only screen and (max-width: 600px) {
       font-size: 1.1rem;
-    padding: .6rem 1.7rem;
-
+      padding: 0.6rem 1.7rem;
     }
-
   }
 }
