--- a/src/styles/nav.scss
+++ b/src/styles/nav.scss
@@ -1,15 +1,44 @@
-
 .nav-container {
-    display:none;
   position: fixed;
   top: 0;
-  left:0;
-  right:0;
+  left: 0;
+  right: 0;
   height: 60px;
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
-  background: rgba(255, 255, 255, 0.7);
+  background: rgba(255, 255, 255, 0.53);
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(9.8px);
+  -webkit-backdrop-filter: blur(12.8px);
+  z-index: 5;
+}
+.nav-logo {
+  height: 100%;
+  h1 {
+    font-family: "Silkscreen", "cursive";
+    font-size: 2.1rem;
+    width:auto;
+    height: auto;
+    cursor: pointer;
+  }
 }
 .nav-links {
   width: 45vw;
   column-gap: 5rem;
+  button,
+  a {
+    font-size: 1.2rem;
+    font-weight: 500;
+    cursor: pointer;
+  }
+  a:nth-child(5) {
+    border: 2px solid black;
+    padding: 0.5rem;
+    box-sizing: border-box;
+    border-radius: 0.2rem;
+    transition: color 0.4s;
+    background-color: rgba(0, 0, 0, 0.05);
+
+    &:hover {
+      color:#059f76;
+    }
+  }
 }
