--- a/src/styles/work.scss
+++ b/src/styles/work.scss
@@ -1,5 +1,6 @@
 .work-container {
-  // border: solid 1px black;
+  padding-top: 3rem;
+
   @media only screen and (max-width: 1100px) {
     height: 100%;
     padding: 5rem 0;
@@ -7,6 +8,7 @@
 }
 .work {
   row-gap: 2rem;
+  justify-content: flex-start;
 }
 .work-title {
   text-align: left;
