--- a/src/styles/nav.scss
+++ b/src/styles/nav.scss
@@ -11,7 +11,8 @@
   z-index: 5;
   @media only screen and (max-width: 900px) {
     bottom: 0;
-    height: 100%;
+    height: 100vh;
+    overflow-y: scroll;
     backdrop-filter: blur(12.8px);
   }
 }
@@ -25,12 +26,11 @@
     font-size: 3.5rem;
     z-index: 5;
     cursor: pointer;
-
   }
   @media only screen and (max-width: 600px) {
     top: 1.5rem;
     right: 1.5rem;
-    font-size: 3rem;
+    font-size: 1.9rem;
     // display: flex;
   }
 }
@@ -41,9 +41,13 @@
   @media only screen and (max-width: 900px) {
     flex-direction: column;
     row-gap: 3rem;
-    justify-content: center;
     height: 95vh;
     overflow-y: scroll;
+    justify-content: flex-start;
+    padding: 5rem 0;
+  }
+  @media only screen and (max-width: 600px) {
+    row-gap: 2rem;
   }
 }
 .nav-logo {
@@ -60,6 +64,9 @@
     @media only screen and (max-width: 900px) {
       font-size: 6rem;
     }
+    @media only screen and (max-width: 600px) {
+      font-size: 3rem;
+    }
   }
 }
 .nav-links {
@@ -72,6 +79,10 @@
     row-gap: 4rem;
     height: auto;
   }
+  @media only screen and (max-width: 600px) {
+    row-gap: 2rem;
+
+  }
   button,
   a {
     font-size: 1.2rem;
@@ -81,8 +92,7 @@
       font-size: 2.5rem;
     }
     @media only screen and (max-width: 600px) {
-      font-size: 2rem;
-
+      font-size: 1.2rem;
     }
   }
   a:nth-child(5) {
