--- a/src/styles/projects.scss
+++ b/src/styles/projects.scss
@@ -1,7 +1,6 @@
 .projects-container {
   position: relative;
   padding-top: 3rem;
-
 }
 .projects {
   @media only screen and (max-width: 600px) {
@@ -145,12 +144,11 @@
   cursor: pointer;
   width: 100%;
   padding-bottom: 0.5rem;
+  column-gap: 1rem;
   @media only screen and (max-width: 1300px) {
     font-size: 1.7rem;
   }
-  a {
-    @media only screen and (max-width: 600px) {
-      justify-content: flex-end;
-    }
+  @media only screen and (max-width: 600px) {
+    justify-content: flex-end;
   }
 }
