--- a/src/styles/landingPage.scss
+++ b/src/styles/landingPage.scss
@@ -39,3 +39,10 @@
     }
   }
 }
+.landing-page-learn-more{
+  transition: all 0.4s;
+  &:hover {
+    background-color: rgba(0,0,0,.2);
+    color: white;
+  }
+}
