--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -39,7 +39,7 @@
   @media only screen and (max-width: 1100px) {
     align-items: center;
   }
-  P {
+  p {
     text-align: left;
     font-size: 1.3rem;
     font-weight: 400;
@@ -54,9 +54,10 @@
     }
     @media only screen and (max-width: 900px) {
       font-size: 1.2rem;
+      font-size: .8rem;
     }
     @media only screen and (max-width: 600px) {
-      line-height: 27px;
+      line-height: 22px;
     }
   }
   .about-technologies {
@@ -86,6 +87,7 @@
     }
     @media only screen and (max-width: 600px) {
       grid-template-columns: repeat(2, auto);
+      justify-items: flex-start;
     }
     li {
       font-size: 1.1rem;
@@ -93,6 +95,9 @@
       color: #059f76;
       @media only screen and (max-width: 1100px) {
         text-decoration: none;
+      }
+      @media only screen and (max-width: 600px) {
+        font-size: 1rem;
       }
     }
     li::before {
@@ -108,6 +113,7 @@
   @media only screen and (max-width: 1100px) {
     justify-self: center;
   }
+  
   img {
     object-fit: cover;
     object-position: bottom;
@@ -115,6 +121,10 @@
     @media only screen and (max-width: 1300px) {
       width: 280px;
       height: 280px;
+    }
+    @media only screen and (max-width: 600px) {
+      width: 220px;
+      height: 220px;
     }
   }
 }
