--- a/src/styles/contact.scss
+++ b/src/styles/contact.scss
@@ -20,9 +20,15 @@
     padding: 1rem 4rem;
     border-radius: 0.5rem;
     cursor: pointer;
+    transition: all 0.4s;
     @media only screen and (max-width: 600px) {
       font-size: 1.1rem;
       padding: 0.6rem 1.7rem;
+    }
+
+    &:hover {
+      background-color: rgba(0, 0, 0, 0.2);
+      color: white;
     }
   }
 }
