--- a/src/styles/work.scss
+++ b/src/styles/work.scss
@@ -24,7 +24,9 @@
   overflow-x: scroll;
   overflow-y: hidden;
   scrollbar-width: none;
-  column-gap: 3rem;
+  align-items: stretch;
+  column-gap: 2rem;
+  position: relative;
   @media only screen and (max-width: 600px) {
     width: 90vw;
     overflow-x: scroll;
@@ -33,7 +35,7 @@
     cursor: pointer;
     font-size: 1rem;
     color: rgba(0, 0, 0, 0.6);
-    padding: 0.3rem 0rem;
+    padding: 0.3rem .5rem;
     text-align: left;
     // border-bottom: solid 2px #059f76;
     letter-spacing: 4px;
@@ -42,15 +44,17 @@
       font-size: 1.2rem;
     }
     @media only screen and (max-width: 600px) {
-      width: auto;
       text-align: center;
-      padding: 0 1rem;
+      width:auto;
+      // padding: 0 1rem;
+      // font-size: 2rem;
     }
   }
 }
 .work-details {
   row-gap: 1rem;
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
+    rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
   border-radius: 0.5rem;
   padding: 1rem;
   width: 100%;
@@ -67,13 +71,16 @@
       flex-wrap: wrap;
       width: 95%;
       justify-content: flex-start;
-      row-gap: .3rem;
+      row-gap: 0.3rem;
     }
     p {
       //   color: rgba(5, 159, 118, 0.8);
       font-weight: 700;
       @media only screen and (max-width: 1100px) {
         font-size: 1.3rem;
+      }
+      @media only screen and (max-width: 600px) {
+        font-size: 1rem;
       }
     }
   }
@@ -87,6 +94,9 @@
     @media only screen and (max-width: 1300px) {
       font-size: 1.8rem;
     }
+    @media only screen and (max-width: 600px) {
+      font-size: 1.3rem;
+    }
   }
   h4 {
     font-size: 1.1rem;
@@ -94,6 +104,9 @@
     color: rgba(0, 0, 0, 0.8);
     @media only screen and (max-width: 1100px) {
       font-size: 1.2rem;
+    }
+    @media only screen and (max-width: 600px) {
+      font-size: 1rem;
     }
   }
   ul {
@@ -106,6 +119,9 @@
       font-weight: 400;
       @media only screen and (max-width: 1100px) {
         font-size: 1.2rem;
+      }
+      @media only screen and (max-width: 600px) {
+        font-size: 1rem;
       }
     }
   }
