--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -1,11 +1,8 @@
 .footer-container {
   // height:10vh;
-  position: absolute;
-  bottom: 80px;
-  padding-bottom: 1rem;
+  padding-top: 5rem;
   color: rgba(0, 0, 0, 0.5);
   @media only screen and (max-width: 600px) {
     bottom: 0px;
   }
-
 }
