--- a/src/styles/work.scss
+++ b/src/styles/work.scss
@@ -56,7 +56,7 @@
   box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
     rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
   border-radius: 0.5rem;
-  padding: 1rem;
+  padding: 2rem 4.5rem 2rem 2rem;
   width: 100%;
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
