--- a/src/styles/work.scss
+++ b/src/styles/work.scss
@@ -19,6 +19,17 @@
   min-height: 550px;
   justify-content: flex-start;
 }
+
+ /* Hide scrollbar for Chrome, Safari and Opera */
+ .work-list::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.work-list {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+} 
 .work-list {
   width: clamp(300px, auto, 1400px);
   overflow-x: scroll;
@@ -62,6 +73,10 @@
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
   // min-height: 500px;
+  @media only screen and (max-width: 600px) {
+    padding: 2rem 2rem 2rem 2rem;
+
+  }
   .work-company {
     color: #059f76;
   }
@@ -111,7 +126,7 @@
   }
   ul {
     row-gap: 1.2rem;
-    padding-left: 2rem;
+    // padding-left: 2rem;
     li {
       text-align: left;
       font-size: 1.3rem;
@@ -122,6 +137,7 @@
       }
       @media only screen and (max-width: 600px) {
         font-size: 1rem;
+        padding-left: 0rem;
       }
     }
   }
