--- a/src/index.css
+++ b/src/index.css
@@ -21,15 +21,16 @@
   bottom: 0;
   right: 0;
   z-index: -1;
-  filter: url(#noise);
+  background-image: url("/images/noise.png");
+  background-repeat: repeat;
 }
 
 body {
   position: relative;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: "quicksand", -apple-system, BlinkMacSystemFont, "Segoe UI",
+    "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
+    "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
